--- a/index.html
+++ b/index.html
@@ -9,15 +9,32 @@
 </head>
 <body>
 
-    <!-- Navigatio bar -->
+    <!-- Navigation bar -->
+    
   <header>
     <div class="navbar container">
-      <div class="nav-logo bd-black">Logo</div>
-      <div class="navmenu bd-black">link link link link</div>
-      <div class="navlogin bd-black">Login</div>
+      <div class="nav-logo"><img src="img/logo.svg" alt="Logo Discord" title="Logo Discord"></div>
+      <div class="navmenu">
+        <a class="deco-none color-white" href="#">Scarica</a>
+        <a class="deco-none color-white" href="#">Perchè Discord</a>
+        <a class="deco-none color-white" href="#">Nitro</a>
+        <a class="deco-none color-white" href="#">Sicurezza</a>
+        <a class="deco-none color-white" href="#">Assistenza</a>
+      </div>
+      <div class="navlogin"> <a class="deco-none" href="#">Accedi</a></div>
     </div>
-    <div class="first-main-section row bgcolor-dark-blue">
-      <div class="first-row-section bd-black"></div>
+
+    <!-- Introduction paragraph -->
+
+    <div class="introduction">
+      <div class="info">
+        <h1 class="color-white">Il tuo posto per parlare</h1>
+        <p class="color-white">Che tu faccia di un club scolastico, gruppo di gamer, comunità asrtistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
+      </div>
+      <div class="actions">
+        <a class="mac-download deco-none" href="#">Scarica per Mac</a>
+        <a class="open-browser deco-none color-white" href="#">Apri Discord nel tuo browser</a>
+      </div>
     </div>
   </header>
 
@@ -26,7 +43,7 @@
 
   
     
-
+ 
     <!-- Second main row -->
     <div class="second-main-section row">
       <div class="content bd-black">
