Added voice channels section

--- a/index.html
+++ b/index.html
@@ -46,17 +46,36 @@
   <main>
 
     <!-- Discord channels section -->
-    <section class="channels container">
-      <div class="channels-img">
-        <img src="img/item1.svg" alt="Discord channels" title="Discord channels">
-      </div>
-      <div class="channels-info">
-        <h2 class="">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare un chat di gruppo</p>
-      </div>
-    </section>
+    <div class="row">
+      <section class="main-section container">
+        <div class="channels-img">
+          <img src="img/item1.svg" alt="Discord channels" title="Discord channels">
+        </div>
+        <div class="info">
+          <h2 class="">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+          <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare un chat di gruppo</p>
+        </div>
+      </section>
+    </div>
 
-    
+
+
+    <!-- Voice channels section -->
+    <div class="wave"></div>
+    <div class="row bgcolor-grey">
+      <section class="main-section container row-reverse">
+        <div class="voice-img">
+          <img src="img/item2.svg" alt="Voice channels" title="Voice Channels">
+        </div>
+        <div class="info">
+          <h2>Dove trovarsi é facile</h2>
+          <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare</p>
+        </div>
+      </section>
+    </div>
+    <div class="wave-upsidedown"></div>
+
+
       
     <!-- Third main row-->
     <div class="third-main-section row  bgcolor-grey">
