Added Community section

--- a/index.html
+++ b/index.html
@@ -76,22 +76,20 @@
     <div class="wave-upsidedown"></div>
 
 
-      
-    <!-- Third main row-->
-    <div class="third-main-section row  bgcolor-grey">
-      <div class="content bd-black container">
-        <div class="small-width bgcolor-pink"></div>
-        <div class="large-width bgcolor-blue"></div>
-      </div>
+    <!-- Community section -->
+    <div class="row">
+      <section class="main-section container">
+        <div class="channels-img">
+          <img src="img/item3.svg" alt="Discord Community" title="Discord Community">
+        </div>
+        <div class="info">
+          <h2 class="">Da pochi a un fandom</h2>
+          <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+        </div>
+      </section>
     </div>
 
-    <!-- Fourth main row -->
-    <div class="fourth-main-section row">
-      <div class="content bd-black container">
-        <div class="large-width bgcolor-blue"></div>
-        <div class="small-width bgcolor-pink"></div>
-      </div> 
-    </div>
+
 
     <!-- Fifth main row -->
     <div class="fifth-main-section bgcolor-grey">
